--- a/app/src/main/res/drawable/button_cust.xml
+++ b/app/src/main/res/drawable/button_cust.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle" >
+        android:shape="rectangle"
+        android:background="?attr/selectableItemBackgroundBorderless">
         <corners
-            android:radius="2dp"
+            android:radius="5dp"
             />
         <solid
             android:color="@android:color/holo_blue_dark"
             />
         <stroke
-            android:width="10dp"
+            android:width="3dp"
             android:color="#80ffffff"
             />
+
+
 
     </shape>
 
 
-    <!--<selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:drawable="@drawable/button_pressed"
-            android:state_pressed="true" />
-        <item android:drawable="@drawable/button_focused"
-            android:state_focused="true" />
-        <item android:drawable="@drawable/button_default" />
-    </selector>
-    -->
+
