--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.629"
-        app:srcCompat="@drawable/ic_account_plus_black_24dp" />
+        app:srcCompat="@drawable/ic_account_plus_black_24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp" />
 
     <ImageButton
         android:id="@+id/main_acessarConta"
@@ -66,10 +70,13 @@
         style="@android:style/Widget.DeviceDefault.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="6dp"
+        android:paddingRight="2dp"
+        android:paddingStart="2dp"
         android:text="@string/acesse"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintHorizontal_bias="0.208"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_acessarConta"
@@ -78,16 +85,17 @@
     <TextView
         android:id="@+id/txtCriar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="18dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:text="@string/criar"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.832"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.049"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/main_criarConta"
-        app:layout_constraintVertical_bias="0.052" />
+        app:layout_constraintHorizontal_bias="0.75" />
 
 </android.support.constraint.ConstraintLayout>
