--- a/app/src/main/res/layout/activity_nova_consulta.xml
+++ b/app/src/main/res/layout/activity_nova_consulta.xml
@@ -9,22 +9,64 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="?attr/colorPrimary">
+
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+            <TextView
+                android:id="@+id/nConsul_idUsuario"
+                android:layout_width="180dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/usuario"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.625" />
+
+            <TextView
+                android:id="@+id/nConsul_idConsulta"
+                android:layout_width="100dp"
+                android:layout_height="32dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/id"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_nova_consulta"
-        android:id="@+id/include2" />
+        android:id="@+id/nConsul_content" 
+        />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/novaConsulta_Sair"
+        android:id="@+id/nvConsul_Sair"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -32,12 +74,14 @@
         app:backgroundTint="@android:color/holo_orange_light"
         app:srcCompat="@drawable/ic_logout_variant_white_24dp" />
 
+
+
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="bottom|left"
-        app:layout_anchor="@+id/include2"
+        app:layout_anchor="@+id/nConsul_content"
         app:layout_anchorGravity="top|right"
         app:srcCompat="@drawable/logo3a" />
 
