--- a/app/src/main/res/drawable/button_cust.xml
+++ b/app/src/main/res/drawable/button_cust.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    <shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle"
-        android:background="?attr/selectableItemBackgroundBorderless">
+            >
         <corners
-            android:radius="5dp"
+            android:radius="2dp"
             />
         <solid
-            android:color="@android:color/holo_blue_dark"
+            android:color="@color/colorSecondary"
             />
         <stroke
             android:width="3dp"
