--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.011"
         app:srcCompat="@drawable/logo3a" />
-    
-            
+
 
     <ImageButton
         android:id="@+id/main_criarConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:background="@drawable/icon_bkgrnd_no"
         android:baselineAlignBottom="true"
@@ -39,11 +42,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.629"
-        app:srcCompat="@drawable/ic_account_plus_black_24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp" />
+        app:srcCompat="@drawable/ic_account_plus_black_24dp" />
 
     <ImageButton
         android:id="@+id/main_acessarConta"
