--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -11,18 +11,21 @@
     tools:showIn="@layout/activity_nova_consulta">
 
     <ScrollView
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
+        android:layout_width="407dp"
+        android:layout_height="599dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="1dp"
+        tools:layout_editor_absoluteY="5dp"
+        android:layout_marginLeft="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:orientation="vertical"
             android:weightSum="1">
 
@@ -35,12 +38,13 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="8dp"
+                android:enabled="true"
                 android:hint="CPF do paciente - Apenas números"
                 android:inputType="number" />
 
             <EditText
-                android:id="@+id/nvConsulnomePaciente"
+                android:id="@+id/nvConsul_nomePaciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -53,125 +57,149 @@
 
 
             <EditText
-                android:id="@+id/nvConsulnascPaciente"
+                android:id="@+id/nvConsul_nascPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="18dp"
-                android:layout_marginBottom="8dp"
                 android:hint="Data Nascimento"
                 android:inputType="date" />
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <Spinner
+                android:id="@+id/nvConsul_spGenero"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:minWidth="250dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/nvConsul_idRegiao"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:minWidth="250dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nvConsul_spGenero">
+
+            </Spinner>
+
+            <Spinner
+                android:id="@+id/nvConsul_idArea"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:elevation="1dp"
+                android:minWidth="250dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nvConsul_idRegiao" />
+
+            <Spinner
+                android:id="@+id/nvConsul_tipoDuvida"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:minWidth="250dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nvConsul_idArea" />
+
+         <android.support.constraint.ConstraintLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="8dp"
+             android:layout_marginBottom="8dp">
+
+             <EditText
+                 android:id="@+id/nvConsul_txCaso"
+                 android:layout_width="330dp"
+                 android:layout_height="wrap_content"
+                 android:layout_margin="8dp"
+                 android:layout_marginLeft="8dp"
+                 android:layout_marginStart="8dp"
+                 android:allowUndo="true"
+                 android:hint="Descreva o caso da melhor forma possível"
+                 android:inputType="text|textMultiLine"
+                 android:theme="@style/AppTheme"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintHorizontal_bias="0.0"
+                 app:layout_constraintLeft_toLeftOf="parent"
+                 app:layout_constraintRight_toRightOf="parent"
+                 app:layout_constraintTop_toTopOf="parent" />
 
 
-                <Spinner
-                    android:id="@+id/nvConsul_spGenero"
-                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:minWidth="250dp"
-                    app:layout_constraintBottom_toTopOf="@+id/nvConsul_txCaso"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+             <ImageButton
+                 android:id="@+id/nvConsul_botaoFalar"
+                 android:layout_width="48dp"
+                 android:layout_height="48dp"
+                 android:layout_margin="8dp"
+                 android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+                 android:theme="@android:style/Theme.Material.Light.Voice"
+                 app:srcCompat="@android:drawable/ic_btn_speak_now"
+                 app:layout_constraintTop_toTopOf="parent"
+                 android:layout_marginTop="16dp"
+                 app:layout_constraintLeft_toRightOf="@+id/nvConsul_txCaso"
+                 android:layout_marginLeft="8dp" />
 
-                <Spinner
-                    android:id="@+id/nvConsul_idRegiao"
-                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:minWidth="250dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/nvConsul_spGenero">
-
-                </Spinner>
-
-                <Spinner
-                    android:id="@+id/nvConsul_idArea"
-                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:elevation="1dp"
-                    android:minWidth="250dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/nvConsul_idRegiao" />
-
-                <Spinner
-                    android:id="@+id/nvConsul_tipoDuvida"
-                    style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="16dp"
-                    android:minWidth="250dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/nvConsul_idArea" />
+         </android.support.constraint.ConstraintLayout>
 
 
-                <EditText
-                    android:id="@+id/nvConsul_txCaso"
-                    android:layout_width="334dp"
-                    android:layout_height="113dp"
-                    android:ems="10"
-                    android:hint="Descreva o caso da melhor forma possível"
-                    android:inputType="text|textMultiLine"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginTop="224dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.0" />
-
-                <Button
-                    android:id="@+id/nvConsul_saveConsulta"
-                    android:layout_width="151dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="17dp"
-                    android:background="@drawable/button_cust"
-                    android:onClick="salvar_consulta"
-                    android:text="@string/save"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/nvConsul_txCaso"
-                    tools:ignore="HardcodedText"
-                    app:layout_constraintHorizontal_bias="0.504" />
 
 
-            </android.support.constraint.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/nvConsul_fotoFilme"
+                android:layout_width="250dp"
+                android:layout_height="56dp"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center"
+                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
+                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
+
+
+            <Button
+                android:id="@+id/nvConsul_saveConsulta"
+                style="@android:style/Widget.Material.Button"
+                android:layout_width="151dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_cust"
+                android:onClick="salvar_consulta"
+                android:text="@string/save" />
+
 
 
         </LinearLayout>
