--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -144,7 +144,7 @@
 
              <EditText
                  android:id="@+id/nvConsul_txCaso"
-                 android:layout_width="330dp"
+                 android:layout_width="320dp"
                  android:layout_height="wrap_content"
                  android:layout_margin="8dp"
                  android:layout_marginLeft="8dp"
@@ -169,37 +169,38 @@
                  android:theme="@android:style/Theme.Material.Light.Voice"
                  app:srcCompat="@android:drawable/ic_btn_speak_now"
                  app:layout_constraintTop_toTopOf="parent"
-                 android:layout_marginTop="16dp"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 android:layout_marginTop="8dp"
+                 android:layout_marginBottom="8dp"
+                 app:layout_constraintVertical_bias="0.466"
                  app:layout_constraintLeft_toRightOf="@+id/nvConsul_txCaso"
-                 android:layout_marginLeft="8dp" />
+                 android:layout_marginLeft="8dp"
+                 android:layout_marginRight="8dp"
+                 app:layout_constraintRight_toRightOf="parent" />
 
          </android.support.constraint.ConstraintLayout>
-
-
 
 
             <ImageButton
                 android:id="@+id/nvConsul_fotoFilme"
                 android:layout_width="250dp"
                 android:layout_height="56dp"
-                android:layout_marginBottom="8dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                 app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
 
 
             <Button
                 android:id="@+id/nvConsul_saveConsulta"
-                style="@android:style/Widget.Material.Button"
+                style="@android:style/Widget.Material.Button.Inset"
                 android:layout_width="151dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="24dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/button_cust"
                 android:onClick="salvar_consulta"
                 android:text="@string/save" />
-
 
 
         </LinearLayout>
