adicao de telas no dashboard do usuario: relatorios e rotas.

--- a/app/src/main/res/drawable/icon_bkgrnd_no.xml
+++ b/app/src/main/res/drawable/icon_bkgrnd_no.xml
@@ -3,9 +3,9 @@
     android:shape="oval">
 
     <gradient
-        android:startColor="#fffefe"
-        android:centerColor="#4073d1"
-        android:endColor="#0f0154"
+        android:startColor="#0f0154"
+        android:centerColor="@color/colorSecondary"
+        android:endColor="#ffe8e8e8"
         android:type="linear"
         android:angle="45"
         android:centerX="48%"
