--- a/app/src/main/res/drawable/btn_text_custom.xml
+++ b/app/src/main/res/drawable/btn_text_custom.xml
@@ -5,13 +5,15 @@
         android:shape="rectangle"
             >
         <corners
-            android:radius="2dp"
+            android:radius="4dp"
             />
         <solid
             android:color="@color/colorSecondary"
             />
-
-
+        <stroke
+            android:color="@color/colorAccent"
+            android:width="2dp">
+        </stroke>
 
 
     </shape>
