--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="#303F9F"
-        android:centerColor="#2196F3"
+        android:endColor="#0f0154"
+        android:centerColor="@color/colorSecondary"
         android:startColor="#B3E5FC"
         android:type="linear" />
 </shape>
