--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -183,11 +183,11 @@
 
             <ImageButton
                 android:id="@+id/nvConsul_fotoFilme"
+                style="@android:style/Widget.ImageButton"
                 android:layout_width="250dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                 app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
 
 
