--- a/app/src/main/res/layout/nav_header_user_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_user_dashboard.xml
@@ -2,49 +2,48 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/navHeader_fotoPerfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_width="102dp"
+        android:layout_height="102dp"
+        android:layout_marginLeft="16dp"
         app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:ignore="ContentDescription" />
+        android:contentDescription="@string/pict"
+        android:layout_weight="0.71"
+        />
 
-    <TextView
-        android:id="@+id/navHeader_nomeUsuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nome_usuario"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+
+
+        <TextView
+            android:id="@+id/navHeader_nomeUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:hint="@string/nome_usuario"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/navHeader_cpfUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:text="@string/cpf_usuario_ativo"/>
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:hint="@string/cpf_usuario_ativo"
+        android:textColorHighlight="@color/colorAccent" />
 
-
-
-    <TextView
-        android:id="@+id/navHeader_emailUsuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:text="android.studio@android.com"
-        tools:ignore="HardcodedText" />
 
 </LinearLayout>
