--- a/app/src/main/res/layout/user_login.xml
+++ b/app/src/main/res/layout/user_login.xml
@@ -38,11 +38,10 @@
                     android:id="@+id/userLogin_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="25dp"
-                    android:layout_marginTop="25dp"
+
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1" />
+                    android:textColorHint="@color/colorSecondary" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -57,25 +56,24 @@
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
+                    android:imeOptions="actionGo"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:layout_marginBottom="25dp"
-                    android:layout_marginTop="30dp"/>
+                    android:textStyle="bold" />
 
             </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/userLogin_botaoAcessar"
-                style="?android:textAppearanceSmall"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
-                android:layout_marginBottom="35dp"
-                android:text="@string/action_sign_in"
+                style="@android:style/Widget.Material.Button.Colored"
+                android:layout_width="180dp"
+                android:layout_height="48dp"
                 android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
-                android:background="@drawable/button_cust"/>
+                android:layout_marginBottom="35dp"
+                android:layout_marginTop="40dp"
+                android:elevation="2dp"
+                android:text="@string/action_sign_in"
+                android:textColorLink="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/userLogin_esqueceuSenha"
